--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,1 +1,56 @@
-<p>nav-bar works!</p>
+<div class="container mb-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" routerLink="/">Restaurant</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a
+                      routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                      class="nav-link" routerLink="/"
+                    >Home</a>
+                </li>
+                <li class="nav-item">
+                    <a
+                      routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                      class="nav-link" routerLink="/categories"
+                    >Categories</a>
+                </li>
+                <li class="nav-item">
+                    <a
+                      routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                      class="nav-link" routerLink="/ingredients"
+                    >Ingredients</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                    class="nav-link" routerLink="/statuses"
+                  >Statuses</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                    class="nav-link" routerLink="/products"
+                  >Products</a>
+                </li>
+                <li class="nav-item">
+                    <a
+                      routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                      class="nav-link" routerLink="/orders"
+                    >Orders</a>
+                </li>
+                <li class="nav-item">
+                  <a
+                    routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}"
+                    class="nav-link" routerLink="/about"
+                  >About</a>
+              </li>
+            </ul>
+        </div>
+    </nav>
+
+</div>
