Create UI for categories and add messages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,6 @@
 
   <router-outlet></router-outlet>
 
+  <app-message-list class="mt-3" [messages]="messageService.messages"></app-message-list>
+
 </div>
