--- a/src/app/pages/categories/category-add/category-add.component.html
+++ b/src/app/pages/categories/category-add/category-add.component.html
@@ -1,1 +1,8 @@
-<p>category-add works!</p>
+<app-category-form (onFormSubmit)="handleFormSubmit()" [model]="category">
+
+</app-category-form>
+
+
+<div class="text-right mb-3">
+  <app-go-back></app-go-back>
+</div>
