--- a/src/app/pages/categories/category-details/category-details.component.html
+++ b/src/app/pages/categories/category-details/category-details.component.html
@@ -1,1 +1,5 @@
-<p>category-details works!</p>
+<h2 class="page-title">Category info</h2>
+
+<app-category-table class="mt-5" [category]="category"></app-category-table>
+
+<app-go-back class="mt-2 float-right"></app-go-back>
