Create base api service

--- a/src/app/pages/categories/category-add/category-add.component.html
+++ b/src/app/pages/categories/category-add/category-add.component.html
@@ -1,8 +1,8 @@
-<app-category-form (onFormSubmit)="handleFormSubmit()" [model]="category">
+<app-category-form
+    [model]="category"
+    (onFormSubmit)="handleFormSubmit()"
+></app-category-form>
 
-</app-category-form>
-
-
-<div class="text-right mb-3">
+<div class="mt-4 text-right">
   <app-go-back></app-go-back>
 </div>
