--- a/src/app/pages/categories/category-edit/category-edit.component.html
+++ b/src/app/pages/categories/category-edit/category-edit.component.html
@@ -5,7 +5,9 @@
     (onFormSubmit)="handleFormSubmit()"
   ></app-category-form>
 
-  <app-go-back class="mt-4 float-right"></app-go-back>
+  <div class="mt-4 text-right">
+    <app-go-back></app-go-back>
+  </div>
 
 </div>
 
