--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
 
   <router-outlet></router-outlet>
 
-  <app-message-list class="mt-3" [messages]="messageService.messages"></app-message-list>
+  <app-message-list class="mt-3 d-block" [messages]="messageService.messages">
+    
+  </app-message-list>
 
 </div>
