Add timeToLive param for 'message' component

--- a/src/app/components/messages/message-list/message-list.component.html
+++ b/src/app/components/messages/message-list/message-list.component.html
@@ -1,6 +1,7 @@
 <app-message
   *ngFor="let message of messages"
   [message]="message"
+  [timeToLive]="messageTimeToLive"
   (onDelete)="handleMessageDelete($event)"
 >
 
