--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
 
   <router-outlet></router-outlet>
 
-  <app-message-list class="mt-3 d-block" [messages]="messageService.messages">
-    
+  <app-message-list
+    [messages]="messageService.messages"
+    [messageTimeToLive]="1000"
+    class="mt-3 d-block">
+
   </app-message-list>
 
 </div>
