--- a/src/app/components/loading/loading.component.html
+++ b/src/app/components/loading/loading.component.html
@@ -1,1 +1,1 @@
-<img class="preloader" src="assets/images/preloader.gif" alt="">
+<img class="preloader" src="assets/images/gif/preloader.gif" alt="">
