Let the form pass a created category to its parent

--- a/src/app/pages/categories/category-add/category-add.component.html
+++ b/src/app/pages/categories/category-add/category-add.component.html
@@ -1,6 +1,6 @@
 <app-category-form
     [model]="category"
-    (onFormSubmit)="handleFormSubmit()"
+    (onFormSubmit)="handleFormSubmit($event)"
 ></app-category-form>
 
 <div class="mt-4 text-right">
