--- a/src/app/pages/categories/category-edit/category-edit.component.html
+++ b/src/app/pages/categories/category-edit/category-edit.component.html
@@ -2,7 +2,7 @@
 
   <app-category-form
     [model]="category"
-    (onFormSubmit)="handleFormSubmit()"
+    (onFormSubmit)="handleFormSubmit($event)"
   ></app-category-form>
 
   <div class="mt-4 text-right">
