Create UI for statuses

--- a/src/app/components/products/product-form/product-form.component.html
+++ b/src/app/components/products/product-form/product-form.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="mainFormGroup" (ngSubmit)="handleFormSubmit()" [formGroup]="mainFormGroup">
+<form (ngSubmit)="handleFormSubmit()" [formGroup]="mainFormGroup">
 
   <div class="form-group">
     <label for="title">Title</label>
