--- a/src/app/components/statuses/status-table/status-table.component.html
+++ b/src/app/components/statuses/status-table/status-table.component.html
@@ -1,1 +1,12 @@
-<p>status-table works!</p>
+<table class="table table-stripped">
+  <thead>
+      <tr>
+          <th>Title</th>
+      </tr>
+  </thead>
+  <tbody>
+      <tr>
+          <td>{{status.title}}</td>
+      </tr>
+  </tbody>
+</table>
