--- a/src/app/components/statuses/status-card/status-card.component.html
+++ b/src/app/components/statuses/status-card/status-card.component.html
@@ -1,1 +1,18 @@
-<p>status-card works!</p>
+<div class="card">
+    <div class="card-body text-center">
+        <h5 class="card-title">{{model.title}}</h5>
+
+        <hr>
+
+        <div class="btn-group d-block mt-2" role="group">
+            <a routerLink="/statuses/details/{{model.id}}" class="btn btn-sm btn-secondary">
+                <fa-icon [icon]="['fas', 'info-circle']"></fa-icon>
+            </a>
+
+            <a routerLink="/statuses/edit/{{model.id}}" type="button" class="btn btn-sm btn-secondary">
+                <fa-icon [icon]="['fas', 'edit']"></fa-icon>
+            </a>
+        </div>
+
+    </div>
+</div>
