--- a/src/app/components/ingredients/ingredient-form/ingredient-form.component.html
+++ b/src/app/components/ingredients/ingredient-form/ingredient-form.component.html
@@ -1,1 +1,41 @@
-<p>ingredient-form works!</p>
+<form (ngSubmit)="handleFormSubmit()" [formGroup]="mainFormGroup">
+
+  <div class="form-group">
+      <label for="title">Title</label>
+      <input formControlName="title"
+        type="text" class="form-control" id="title" placeholder="Enter title"
+      >
+
+      <ng-container *ngIf="formTitle.touched">
+          <div class="alert alert-danger mt-2" *ngIf="formTitle.hasError('required')">
+              The title is required
+          </div>
+
+          <div class="alert alert-danger mt-2" *ngIf="formTitle.hasError('maxlength')">
+              You've entered title of length {{formTitle.value.length}} signs.
+              But max length is {{formTitle.errors.maxlength.requiredLength}} signs
+          </div>
+      </ng-container>
+  </div>
+
+  <div class="form-group">
+    <label for="price">Price</label>
+    <input formControlName="price"
+      type="number" class="form-control" id="title" placeholder="Enter price"
+    >
+
+    <ng-container *ngIf="formPrice.touched">
+        <div class="alert alert-danger mt-2" *ngIf="formPrice.hasError('required')">
+            The price is required
+        </div>
+
+        <div class="alert alert-danger mt-2" *ngIf="formPrice.hasError('min')">
+          Minimum price is ${{formPrice.errors.min.min}}
+        </div>
+    </ng-container>
+</div>
+
+
+  <button [disabled]="mainFormGroup.invalid" class="btn btn-primary">Submit</button>
+
+</form>
