--- a/src/assets/forms.css
+++ b/src/assets/forms.css
@@ -2,6 +2,6 @@
 .ng-valid.required {
     border-left: 5px solid #42A948;
 }
-.ng-invalid:not(form) {
+input.ng-invalid, select.ng-invalid {
     border-left: 5px solid #a94442;
 }
