--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,15 @@
   letter-spacing: 0.45px;
 }
 
+
+.mt-6 {
+  margin-top: 4.5rem;
+}
+.mb-6 {
+  margin-bottom: 4.5rem;
+}
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
