--- a/src/styles.css
+++ b/src/styles.css
@@ -31,6 +31,12 @@
 }
 
 
+.table-vertical-center td, .table-vertical-center th {
+  vertical-align: middle;
+}
+
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
 
