--- a/src/app/components/products/product-form/product-form.component.html
+++ b/src/app/components/products/product-form/product-form.component.html
@@ -93,15 +93,13 @@
     </ng-container>
   </div>
 
-  <div class="form-group mt-4 mb-5 ">
+  <div class="mt-5 mb-5">
+    <h4 class="mb-3">Ingredients</h4>
 
-    <label class="mb-3">Ingredients</label>
-
-    <app-product-ingredients
+    <app-product-ingredients-crud
+      [productIngredients]="productIngredients"
       [ingredientList]="ingredientList"
-      [formArray]="formIngredients"
-    ></app-product-ingredients>
-
+    ></app-product-ingredients-crud>
   </div>
 
 
