--- a/src/app/pages/orders/order-edit/order-edit.component.html
+++ b/src/app/pages/orders/order-edit/order-edit.component.html
@@ -2,8 +2,8 @@
 
   <app-order-form
     [model]="order"
-    [products]="productList"
-    [statuses]="statusList"
+    [productList]="productList"
+    [statusList]="statusList"
     (onFormSubmit)="handleFormSubmit($event)"
   ></app-order-form>
 
